@@ -308,7 +308,7 @@ static void enter_map(object *op, mapstruct *newmap, int x, int y) {
     /* since the players map is already loaded, we don't need to worry
      * about pending objects.
      */
-    remove_all_pets(newmap);
+    remove_all_pets();
 
     /* If the player is changing maps, we need to do some special things
      * Do this after the player is on the new map - otherwise the force swap of the
